--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -203,9 +203,9 @@ jobs:
         id: vars
         run: |
           if [[ -n "${{ inputs.GATEWAY_URLS }}" ]]; then
-            echo "::set-ouptut name=present::true"
+            echo "::set-output name=present::true"
           else
-            echo "::set-ouptut name=present::false"
+            echo "::set-output name=present::false"
           fi
 
       - name: Generate OpenAPI spec
