--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -200,6 +200,7 @@ jobs:
           coverageLocations: ${{ github.workspace }}/target/site/jacoco/jacoco.xml:jacoco
 
       - name: Check if inputs present
+        if: false
         id: vars
         run: |
           if [[ -n "${{ inputs.GATEWAY_URLS }}" ]]; then
