--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -199,22 +199,12 @@ jobs:
           coverageCommand: mvn -B clean verify -Dspotbugs.skip=true --settings .github/settings.xml
           coverageLocations: ${{ github.workspace }}/target/site/jacoco/jacoco.xml:jacoco
 
-      - name: Check if inputs present
-        if: false
-        id: vars
-        run: |
-          if [[ -n "${{ inputs.GATEWAY_URLS }}" ]]; then
-            echo "::set-output name=present::true"
-          else
-            echo "::set-output name=present::false"
-          fi
-
       - name: Generate OpenAPI spec
-        if: ${{ contains(github.ref, 'master') && steps.vars.outputs.present }}
+        if: contains(github.ref, 'master')
         run: mvn post-integration-test -DgenerateOpenApiDocs=true -DskipTests --settings .github/settings.xml
       
       - name: Update API url in OpenAPI spec
-        if: ${{ contains(github.ref, 'master') && steps.vars.outputs.present }}
+        if: contains(github.ref, 'master')
         uses: jossef/action-set-json-field@v1
         with:
           file: target/openapi.json
@@ -223,7 +213,7 @@ jobs:
           parse_json: true
       
       - name: Upload OpenAPI spec
-        if: ${{ contains(github.ref, 'master') && steps.vars.outputs.present }}
+        if: contains(github.ref, 'master')
         uses: actions/upload-artifact@v1
         with:
           name: OpenApi spec
