--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -199,12 +199,21 @@ jobs:
           coverageCommand: mvn -B clean verify -Dspotbugs.skip=true --settings .github/settings.xml
           coverageLocations: ${{ github.workspace }}/target/site/jacoco/jacoco.xml:jacoco
 
+      - name: Check if inputs present
+        id: vars
+        run: |
+          if [ '${{ inputs.GATEWAY_URLS }}' == '' ]; then
+            echo "::set-output name=present::false"
+          else
+            echo "::set-output name=present::true"
+          fi
+
       - name: Generate OpenAPI spec
-        if: contains(github.ref, 'master')
+        if: ${{ contains(github.ref, 'master') && steps.vars.outputs.present == 'true' }}
         run: mvn post-integration-test -DgenerateOpenApiDocs=true -DskipTests --settings .github/settings.xml
       
       - name: Update API url in OpenAPI spec
-        if: contains(github.ref, 'master')
+        if: ${{ contains(github.ref, 'master') && steps.vars.outputs.present == 'true' }}
         uses: jossef/action-set-json-field@v1
         with:
           file: target/openapi.json
@@ -213,7 +222,7 @@ jobs:
           parse_json: true
       
       - name: Upload OpenAPI spec
-        if: contains(github.ref, 'master')
+        if: ${{ contains(github.ref, 'master') && steps.vars.outputs.present == 'true' }}
         uses: actions/upload-artifact@v1
         with:
           name: OpenApi spec
