--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -63,7 +63,7 @@ env:
 
 jobs:
   define-vairables:
-    if: github.ref == 'refs/tags/**' || github.ref == 'refs/heads/master'
+    if: contains(github.ref,'master')
     name: Retrive Variables
     runs-on: ubuntu-20.04
     steps:
@@ -83,7 +83,7 @@ jobs:
       version: ${{ steps.version.outputs.VERSION }}
 
   deploy-production:
-    if: github.ref == 'refs/tags/**' && !contains(github.event.head_commit.message, 'skip ci')
+    if: contains(github.ref,'master')
     name: Deploy to Production
     runs-on: ubuntu-18.04
     needs: [ "define-vairables" ]
