--- a/.github/workflows/java-release.yml
+++ b/.github/workflows/java-release.yml
@@ -163,7 +163,7 @@ jobs:
           SLACK_CHANNEL: "deployments"
           SLACK_COLOR: ${{ job.status }} # or a specific color like 'green' or '#ff00ff'
           SLACK_ICON: " https://github.com/rtCamp.png?size=48"
-          SLACK_MESSAGE: ${{ github.event.head_commit.message }}
-          SLACK_TITLE: "Commit Message"
+          SLACK_MESSAGE: "Repository: ${{ github.event.repository.name }} Relase Title: ${{ github.event.release.name }}"
+          SLACK_TITLE: "Message"
           SLACK_USERNAME: "GitHub Actions"
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}      
