--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -251,13 +251,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Cache Maven dependencies
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-maven-dependencies
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('pom.xml') }}
+      # - name: Cache Maven dependencies
+      #   uses: actions/cache@v2
+      #   env:
+      #     cache-name: cache-maven-dependencies
+      #   with:
+      #     path: ~/.m2
+      #     key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('pom.xml') }}
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -356,5 +356,16 @@ jobs:
         if: inputs.PUBLISH_TO_PUBLIC_README == 'true'
         with:
           rdme: openapi target/openapi.json --key="${{ secrets.README_IO_PUBLIC_API_KEY }}" --id="${{ inputs.PUBLIC_API_ID }}"
-
+    
+      - name: Slack Notification
+        if: ${{ failure() }}
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_CHANNEL: "deployments"
+          SLACK_COLOR: ${{ job.status }} # or a specific color like 'green' or '#ff00ff'
+          SLACK_ICON: " https://github.com/rtCamp.png?size=48"
+          SLACK_MESSAGE: ${{ github.event.head_commit.message }}
+          SLACK_TITLE: "Message"
+          SLACK_USERNAME: "GitHub Actions"
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
 
