all: add steps to update values yaml

--- a/.github/workflows/php-master.yml
+++ b/.github/workflows/php-master.yml
@@ -245,6 +245,26 @@ jobs:
             exit 1
           fi
 
+      - name: Update staging value.yaml
+        uses: mikefarah/yq@master
+        env:
+          IMAGE_TAG: ${{ needs.define-variables.outputs.commit }}
+        with:
+          cmd: yq -i ".image.tag = env(IMAGE_TAG)" ${{ inputs.HELM_REPOSITORY }}/${{ inputs.HELM_VALUES }}
+      
+      - name: Push changes to git
+        working-directory: ${{ inputs.HELM_REPOSITORY }}
+        run: |
+          echo "${{ secrets.ACTIONS_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+          git config --global user.name "GitHub Actions"
+          git config --global user.email ${{ inputs.GTIHUB_ACTIONS_EMAIL }}
+
+          git add .
+          git commit -m "[skip ci] update snapshot version for ${{ github.event.repository.name }}"
+          git pull origin master --rebase && git push
+
       - name: Slack Notification
         if: ${{ failure() }}
         uses: rtCamp/action-slack-notify@v2
