--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -332,6 +332,26 @@ jobs:
             exit 1
           fi
 
+      - name: Update staging value.yaml
+        uses: mikefarah/yq@master
+        env:
+          IMAGE_TAG: ${{ needs.define-variables.outputs.commit }}
+        with:
+          cmd: yq -i ".image.tag = env(IMAGE_TAG)" ${{ inputs.HELM_REPOSITORY }}/${{ inputs.HELM_VALUES }}
+      
+      - name: Push changes to git
+        working-directory: ${{ inputs.HELM_REPOSITORY }}
+        run: |
+          echo "${{ secrets.ACTIONS_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+          git config --global user.name "GitHub Actions"
+          git config --global user.email ${{ inputs.GTIHUB_ACTIONS_EMAIL }}
+
+          git add .
+          git commit -m "[skip ci] update snapshot version for ${{ github.event.repository.name }}"
+          git pull origin master --rebase && git push
+
   publish-docs:
     if: ${{ contains(github.ref, 'master') && inputs.PUBLISH_TO_INTERNAL_README == 'true' || inputs.PUBLISH_TO_PUBLIC_README == 'true' }}
     name: Publish documentation to Readme.io
