--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -134,7 +134,27 @@ jobs:
             helm -n ${{ inputs.HELM_NAMESPACE }} rollback ${{ github.event.repository.name }} 0
             exit 1
           fi
+
+      - name: Update staging value.yaml
+        uses: mikefarah/yq@master
+        env:
+          VERSION_TAG: ${{ needs.define-vairables.outputs.version }}
+        with:
+          cmd: yq -i ".image.tag = env(VERSION_TAG)" ${{ inputs.HELM_REPOSITORY }}/${{ inputs.HELM_VALUES }}
       
+      - name: Push changes to git
+        working-directory: ${{ inputs.HELM_REPOSITORY }}
+        run: |
+          echo "${{ secrets.ACTIONS_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+          git config --global user.name "GitHub Actions"
+          git config --global user.email ${{ inputs.GTIHUB_ACTIONS_EMAIL }}
+
+          git add .
+          git commit -m "[skip ci] update snapshot version for ${{ github.event.repository.name }}"
+          git pull origin master --rebase && git push
+
       - name: Slack Notification
         if: ${{ always() }}
         uses: rtCamp/action-slack-notify@v2
