added GTIHUB_ACTIONS_EMAIL input

--- a/.github/workflows/node-master.yml
+++ b/.github/workflows/node-master.yml
@@ -45,6 +45,9 @@ on:
       GITHUB_BRANCH:
         default: "master"
         type: string
+      GTIHUB_ACTIONS_EMAIL:
+        type: string
+        required: true
       GITHUB_ORG:
         type: string
         required: true
@@ -196,7 +199,7 @@ jobs:
             exit 1
           fi
 
-      - name: Update staging value.yaml
+      - name: Update value.yaml
         uses: mikefarah/yq@master
         env:
           IMAGE_TAG: ${{ needs.define-variables.outputs.commit }}
