--- a/.github/workflows/java-release.yml
+++ b/.github/workflows/java-release.yml
@@ -156,7 +156,7 @@ jobs:
             exit 1
           fi
 
-      - name: Update staging value.yaml
+      - name: Update value.yaml
         uses: mikefarah/yq@master
         env:
           VERSION_TAG: ${{ needs.define-vairables.outputs.version }}
