--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -331,17 +331,13 @@ jobs:
             helm -n ${{ inputs.HELM_NAMESPACE }} rollback ${{ github.event.repository.name }} 0
             exit 1
           fi
-
-      - name: Update value.yaml
-        uses: mikefarah/yq@master
+      
+      - name: Update and Push values
+        working-directory: ${{ inputs.HELM_REPOSITORY }}
         env:
           IMAGE_TAG: ${{ needs.define-variables.outputs.commit }}
-        with:
-          cmd: yq -i ".image.tag = env(IMAGE_TAG)" ${{ inputs.HELM_REPOSITORY }}/${{ inputs.HELM_VALUES }}
-      
-      - name: Push changes to git
-        working-directory: ${{ inputs.HELM_REPOSITORY }}
         run: |
+          sed -i "s/tag: .*/tag: '$IMAGE_TAG'/" ${{ inputs.HELM_VALUES }}
           echo "${{ secrets.ACTIONS_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
