all: releases: update values with sed

--- a/.github/workflows/php-release.yml
+++ b/.github/workflows/php-release.yml
@@ -155,16 +155,12 @@ jobs:
             exit 1
           fi
 
-      - name: Update value.yaml
-        uses: mikefarah/yq@master
+      - name: Update and Push values
+        working-directory: ${{ inputs.HELM_REPOSITORY }}
         env:
           VERSION_TAG: ${{ needs.define-vairables.outputs.version }}
-        with:
-          cmd: yq -i ".image.tag = env(VERSION_TAG)" ${{ inputs.HELM_REPOSITORY }}/${{ inputs.HELM_VALUES }}
-      
-      - name: Push changes to git
-        working-directory: ${{ inputs.HELM_REPOSITORY }}
         run: |
+          sed -i "s/tag: .*/tag: '$VERSION_TAG'/" ${{ inputs.HELM_VALUES }}
           echo "${{ secrets.ACTIONS_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
