all: use sed to update values

--- a/.github/workflows/node-master.yml
+++ b/.github/workflows/node-master.yml
@@ -199,12 +199,13 @@ jobs:
             exit 1
           fi
 
-      - name: Update and Push values
+      - if: contains(github.event_name, 'push')
+        name: Update and Push values
         working-directory: ${{ inputs.HELM_REPOSITORY }}
         env:
           IMAGE_TAG: ${{ needs.define-variables.outputs.commit }}
         run: |
-          sed -i "s/tag: .*/tag: '$IMAGE_TAG'/" ${{ inputs.HELM_REPOSITORY }}/${{ inputs.HELM_VALUES }}
+          sed -i "s/tag: .*/tag: '$IMAGE_TAG'/" ${{ inputs.HELM_VALUES }}
           echo "${{ secrets.ACTIONS_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
